<resources>
    <string name="app_name">SpeakGayo</string>
    <string name="title_home">Home</string>
    <string name="title_Favorite">Favorite</string>
    <string name="title_History">History</string>
    <string name="title_News">News</string>
    <string name="fromLang">FromLang</string>
    <string name="toLang">ToLang</string>
    <string name="fromLangLabel">Indonesia</string>
    <string name="terjemahkan">Terjemahkan</string>
    <string name="toLangLabel">Gayo</string>
    <string name="isiInput">Masukkan teks</string>
    <string name="isiOutput">Terjemahan</string>
    <string name="lang_gayo">Gayo</string>
    <string name="lang_indonesia">Indonesia</string>
    <string name="n_found">Favorite Kosong</string>
    <string name="n2_found">History Kosong</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="speak_now">Bicara bro</string>
    <string name="back_icon_info">Back</string>
    <string name="heart_icon_info">Favorite Button</string>
    <string name="profile_image_info">About Me</string>
</resources>