<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/baseline_newspaper_24"
        android:title="@string/title_News" />
    <item
        android:id="@+id/fab"
        android:icon="@drawable/baseline_camera_alt_24"
        android:title="" />
    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/baseline_star_outline_24"
        android:title="@string/title_Favorite" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/baseline_history_24"
        android:title="@string/title_History" />

</menu>