<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/linear_layout"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/roundbg"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/fromLang"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/fromLang"
                android:paddingLeft="30dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <TextView
                android:id="@+id/toLang"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:layout_weight="2"
                android:paddingStart="100dp"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/toLang"
                android:textAlignment="center"
                android:textColor="@color/white"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <ImageView
            android:id="@+id/replace"
            android:layout_width="110dp"
            android:layout_height="108dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-10dp"
            android:clickable="true"
            android:onClick="onReplaceClicked"
            android:src="@drawable/replace"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck"
            android:focusable="true" />

    </RelativeLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputFrom"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/roundcombineinput">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="20dp"
            android:paddingTop="10dp"
            tools:ignore="RtlSymmetry">

            <TextView
                android:id="@+id/textFrom"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/fromLangLabel"
                android:textColor="@color/bluetext"
                android:textSize="16sp"
                tools:ignore="RtlHardcoded,TextSizeCheck" />

            <ImageView
                android:id="@+id/audioImage"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="200dp"
                android:onClick="audioButtonClicked"
                android:src="@drawable/audio"
                tools:ignore="ContentDescription,SpeakableTextPresentCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <ImageView
                android:id="@+id/pasteButton"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="165dp"
                android:contentDescription="@string/fromLangLabel"
                android:onClick="cancelButtonClicked"
                android:src="@drawable/paste_icon"
                tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

            <ImageView
                android:id="@+id/cancelButton"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/fromLangLabel"
                android:onClick="cancelButtonClicked"
                android:src="@drawable/cancel"
                tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="10dp"
            android:paddingBottom="70dp"
            android:paddingTop="10dp"
            tools:ignore="RtlSymmetry">

<<<<<<< HEAD
            <com.khairililmi.speakgayo.customview.CustomEditText
                android:id="@+id/editTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:autofillHints=""
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/isiInput"
                android:inputType="text"
                android:maxLength="80"
                android:maxLines="6"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:ignore="VisualLintTextFieldSize" />

=======
            <EditText
                android:id="@+id/editTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/isiInput"
                android:inputType="text"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:maxLines="6"
                android:maxLength="80"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:autofillHints=""
                tools:ignore="VisualLintTextFieldSize" />
>>>>>>> 12aa3c1 (first commit md)
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="20dp"
            android:paddingTop="10dp"
            tools:ignore="ExtraText,RtlSymmetry">

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center"
                android:id="@+id/buttonTranslate"
                android:layout_marginEnd="17dp"
                android:backgroundTint="@color/buttonTranslate"
                android:fontFamily="@font/poppins_medium"
                android:minWidth="150dp"
                android:minHeight="48dp"
                android:text="@string/terjemahkan"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:textStyle="normal"
                app:cornerRadius="100dp"
                tools:ignore="TextContrastCheck" />
        </RelativeLayout>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outputLang"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/roundcombineinput">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="20dp"
            android:paddingTop="10dp"
            tools:ignore="RtlSymmetry">

            <TextView
                android:id="@+id/textToLang"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/poppins_bold"
                android:onClick="audioButtonClicked"
                android:text="@string/toLangLabel"
                android:textColor="@color/bluetext"
                android:textSize="16sp"
                tools:ignore="TextSizeCheck,TouchTargetSizeCheck" />

            <ImageView
                android:id="@+id/audioImageOutput"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="200dp"
                android:src="@drawable/audio"
                tools:ignore="ContentDescription" />


        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="20dp"
<<<<<<< HEAD
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingLeft="10dp"
=======
            android:paddingTop="10dp"
>>>>>>> 12aa3c1 (first commit md)
            tools:ignore="RtlSymmetry">

            <TextView
                android:id="@+id/textOutputUser"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="false"
                android:layout_gravity="start"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="40dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/isiOutput"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:ignore="TextSizeCheck" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="end"
            android:paddingEnd="20dp"
<<<<<<< HEAD
            android:paddingTop="100dp"
=======
            android:paddingTop="120dp"
>>>>>>> 12aa3c1 (first commit md)
            android:gravity="end"
            tools:ignore="ExtraText,RtlSymmetry">

            <ImageView
                android:id="@+id/copyImageOutput"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="16dp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onCopyImageClicked"
                android:src="@drawable/baseline_content_copy_24"
                tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <ImageView
                android:id="@+id/shareImageOutput"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="16dp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onShareImageClicked"
                android:src="@drawable/share"
                tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <ImageView
                android:id="@+id/starImageOutput"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onStarImageClicked"
                android:src="@drawable/baseline_star_outline_24"
                tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        </LinearLayout>

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>


</ScrollView>
